@@ -188,9 +188,9 @@ void print_usage(void)
 	printf("                     [-W timeout_secs]\n");
 #endif
 #ifdef WITH_SRV
-	printf("                     [-A bind_address] [-S]\n");
+	printf("                     [-A bind_address] [--nodelay] [-S]\n");
 #else
-	printf("                     [-A bind_address]\n");
+	printf("                     [-A bind_address] [--nodelay]\n");
 #endif
 	printf("                     [-i id] [-I id_prefix]\n");
 	printf("                     [-d] [-N] [--quiet] [-v]\n");
@@ -243,6 +243,8 @@ void print_usage(void)
 	printf(" -W : Specifies a timeout in seconds how long to process incoming MQTT messages.\n");
 #endif
 	printf(" --help : display this message.\n");
+	printf(" --nodelay : disable Nagle's algorithm, to reduce socket sending latency at the possible\n");
+	printf("             expense of more packets being sent.\n");
 	printf(" --pretty : print formatted output rather than minimised output when using the\n");
 	printf("            JSON output format option.\n");
 	printf(" --quiet : don't print error messages.\n");
