@@ -41,6 +41,7 @@
 			<arg><option>-I</option> <replaceable>client-id-prefix</replaceable></arg>
 			<arg><option>-k</option> <replaceable>keepalive-time</replaceable></arg>
 			<arg><option>-N</option></arg>
+			<arg><option>--nodelay</option></arg>
 			<arg><option>--pretty</option></arg>
 			<arg><option>-q</option> <replaceable>message-QoS</replaceable></arg>
 			<arg><option>--remove-retained</option></arg>
@@ -385,6 +386,16 @@
 						from multiple messages directly to another application
 						unmodified. Only really makes sense when not using
 						<option>-v</option>.</para>
+				</listitem>
+			</varlistentry>
+			<varlistentry>
+				<term><option>--nodelay</option></term>
+				<listitem>
+					<para>Disable Nagle's algorithm for the socket. This means
+						that latency of sent messages is reduced, which is
+						particularly noticable for small, reasonably infrequent
+						messages. Using this option may result in more packets
+						being sent than would normally be necessary.</para>
 				</listitem>
 			</varlistentry>
 			<varlistentry>
